--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "homepage": "https://github.com/HYDRANOID294/mern-estate#readme",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.12.2",
+    "mongoose": "^8.13.0",
     "nodemon": "^3.1.9"
   }
 }
